--- a/src/scss/partials/_exit.scss
+++ b/src/scss/partials/_exit.scss
@@ -1,21 +1,31 @@
-.exit__buttons{
+@import './variables';
+
+.exit__page {
+  position: absolute;
+  background-color: $white;
+  width: 102%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 2;
+  .exit__buttons {
     position: absolute;
     width: 100%;
     bottom: 0px;
-    p{
-        margin-bottom: 25px;
-        font-size: 1.3em;
+    p {
+      margin-bottom: 25px;
+      font-size: 1.3em;
     }
-    button{
-        margin-bottom: 15px;
+    button {
+      margin-bottom: 15px;
     }
-}
+  }
 
-
-@media (min-width: 500px){
-    .exit__buttons{
+  @media (min-width: 500px) {
+    .exit__buttons {
       position: static;
       margin-top: 60px;
     }
   }
-  
+}
