add colours on cards

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,6 +3,7 @@
 @import './partials/home.scss';
 @import './partials/puzzle.scss';
 @import './partials/exit.scss';
+@import './partials/cards.scss';
 @import url(https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=DM+Mono:wght@100;200;300;400;500&display=swap);
 
