add game-over ui

--- a/src/scss/partials/_cards.scss
+++ b/src/scss/partials/_cards.scss
@@ -1,37 +1,37 @@
 #pie {
   path {
-    color: #b7295a;
+    color: #e50064;
   }
 }
  #speaker {
      path {
-    color: #6e2585;
+    color: #954a97;
   }
 }
 #lab {
     path {
-    color: #acc236;
+    color: #13a538;
   }
 }
 #puzzle {
     path {
-    color: #3c9eb4;
+    color: #f39100;
   }
 }
 #earth {
     path {
-        color: #002561;
+        color: #0863b5;
   }
 }
 #heart {
     path {
-    color: #dc5034;
+    color: #e3001f;
 
   }
 }
 #star {
     path {
-    color: #f2af00;
+    color: #fec600;
   }
 }
 #music {
