--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -7,19 +7,20 @@ form {
   width: 100%;
 
   label {
-    font-size: 1.5em;
+    font-size: 1.3em;
     letter-spacing: 0px;
     line-height: 0.5;
     font-weight: 400;
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   input {
-    height: 50px;
+    height: 40px;
     margin: 20px 0px;
     box-shadow: $shadow;
     padding: 10px;
-    font-size: 22px;
+    font-size: 20px;
+    font-family: 'DM Mono';
     outline: none;
     &::placeholder {
       color: #aaaaaa;
