add animations a finish the ui

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,6 +5,7 @@
 @import './partials/exit.scss';
 @import './partials/cards.scss';
 @import './partials/game-over.scss';
+@import './partials/animate';
 @import url(https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=DM+Mono:wght@100;200;300;400;500&display=swap);
 
@@ -25,7 +26,15 @@ body {
   height: 100vh;
 }
 
-h1,h2,h3{
+#root {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+h1,
+h2,
+h3 {
   font-weight: 400;
 }
 
@@ -34,8 +43,7 @@ section {
   max-width: 500px;
   display: flex;
   flex-direction: column;
-  height: 100vh; 
-  padding-bottom: 30px; 
+  height: 100vh;
 }
 
 .btn {
