--- a/src/scss/partials/_exit.scss
+++ b/src/scss/partials/_exit.scss
@@ -1,23 +1,38 @@
-
-.exit__page {
+.exit__container {
   position: absolute;
-  background-color: $white;
-  width: 102%;
-  height: 105%;
+  background-color: rgba(255, 255, 255, 0.719);
+  backdrop-filter: blur(2px);
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   z-index: 2;
-  .exit__buttons {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
-    p {
-      margin-bottom: 25px;
-      font-size: 1.3em;
-    }
-    button {
-      margin-bottom: 15px;
+  .exit__page {
+    width: 90%;
+    max-width: 500px;
+    height: 90vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    place-content: center;
+    justify-content: space-evenly;
+    .exit__buttons {
+      position: absolute;
+      width: 100%;
+      bottom: 0px;
+      p {
+        margin-bottom: 25px;
+        font-size: 1.3em;
+      }
+      button {
+        &:first-child {
+          margin-bottom: 15px;
+        }
+      }
     }
   }
 
