--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -1,33 +1,42 @@
-@import './variables';
-
-form {
+.home__component {
   display: flex;
   flex-direction: column;
-  margin: 0px auto;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 
-  label {
-    font-size: 1.3em;
-    letter-spacing: 0px;
-    line-height: 0.5;
-    font-weight: 400;
-    margin-top: 40px;
-  }
+  form {
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
+    width: 100%;
 
-  input {
-    height: 40px;
-    margin: 20px 0px;
-    box-shadow: $shadow;
-    padding: 10px;
-    font-size: 20px;
-    font-family: 'DM Mono';
-    outline: none;
-    &::placeholder {
-      color: #aaaaaa;
+    label {
+      font-size: 1.3em;
+      letter-spacing: 0px;
+      line-height: 0.5;
+      font-weight: 400;
+      margin-top: 40px;
     }
-    &:focus {
+
+    input {
+      height: 40px;
+      border: 2px solid $black;
+      margin: 20px 0px;
+      box-shadow: $shadow;
+      padding: 10px;
+      font-size: 20px;
+      font-family: 'DM Mono';
       outline: none;
-      border: 3px solid $black;
+      transition: border 0.1s ease;
+      
+      &::placeholder {
+        color: #aaaaaa;
+      }
+      &:focus {
+        outline: none;
+        border: 3px solid $black;
+      }
     }
   }
 }
