--- a/src/scss/partials/_layout.scss
+++ b/src/scss/partials/_layout.scss
@@ -3,13 +3,21 @@
   margin: 0px auto;
   background-color: $white;
   justify-content: center;
+  position: absolute;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .layout__page {
+  width: 90%;
+  max-width: 500px;
+  height: 90vh;
   position: relative;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
